Fix vessels labels showing even if vessel visibility parameter is set. Fix vesse labels width

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -183,7 +183,7 @@ button:hover, button:focus, [type="button"]:hover, [type="button"]:focus, [type=
   padding-top: 5px;
   padding-bottom: 0;
   padding-left: 36px;
-  min-height: 26px;
+  min-height: 31px;
   line-height: unset;
 }
 
